[Agrim]SUCCESS: Fixed reset-password in Swagger UI with security config
